--- a/fdphd.bib
+++ b/fdphd.bib
@@ -889,24 +889,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={Optical Society of America}
 }
 /*}}}*/
-@inproceedings{gibbons2010scalable,
-  title={Scalable cylindrical metallo-dielectric metamaterials},
-  author={Gibbons, Nicholas and Kolle, Mathias and Baumberg, Jeremy J and Steiner, Ullrich},
-  booktitle={Quantum Electronics and Laser Science Conference},
-  pages={JWA3},
-  year={2010},
-  organization={Optical Society of America}
-}
-@article{wang2011fiber,
-  title={Fiber metamaterials with negative magnetic permeability in the terahertz},
-  author={Wang, Anna and Tuniz, Alessandro and Hunt, Peter G and Pogson, Elise M and Lewis, Roger A and Bendavid, Avi and Fleming, Simon C and Kuhlmey, Boris T and Large, Maryanne CJ},
-  journal={Optical Materials Express},
-  volume={1},
-  number={1},
-  pages={115--120},
-  year={2011},
-  publisher={Optical Society of America}
-}
+
 % -- combining Dielectric and Metal in 1D PhC --
 % Contopaganos 1999 ELMG props of per ML of metal
 % ZamudioLara 2006 Characterisation of metal diel PhCs
@@ -1286,7 +1269,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 % Weiner Transmission through metallic slits
 
 /*}}}*/
-% -- resonant metamaterials --/*{{{*/
+% -- other resonant metamaterials --/*{{{*/
 @article{koschny2004effective,
   title={Effective medium theory of left-handed materials},
   author={Koschny, Th and Kafesaki, M and Economou, EN and Soukoulis, CM},
@@ -1312,6 +1295,30 @@ Terahertz spectroscopy of ferroelectrics and related materials
   author={Cro{\"e}nne, Charles},
   year={2009},
   school={Universit{\'e} des Sciences et Technologie de Lille, Lille I}
+}
+@inproceedings{gibbons2010scalable,
+  title={Scalable cylindrical metallo-dielectric metamaterials},
+  author={Gibbons, Nicholas and Kolle, Mathias and Baumberg, Jeremy J and Steiner, Ullrich},
+  booktitle={Quantum Electronics and Laser Science Conference},
+  pages={JWA3},
+  year={2010},
+  organization={Optical Society of America}
+}
+@article{wang2011fiber,
+  title={Fiber metamaterials with negative magnetic permeability in the terahertz},
+  author={Wang, Anna and Tuniz, Alessandro and Hunt, Peter G and Pogson, Elise M and Lewis, Roger A and Bendavid, Avi and Fleming, Simon C and Kuhlmey, Boris T and Large, Maryanne CJ},
+  journal={Optical Materials Express},
+  volume={1},
+  number={1},
+  pages={115--120},
+  year={2011},
+  publisher={Optical Society of America}
+}
+@inproceedings{yakiyama2012terahertz,
+  title={Terahertz response of metamaterials constructed of TiO 2 spheres and a metal-mesh},
+  author={Yakiyama, Y and Takano, K and Kitahara, H and Miyamaru, F and Bakunov, MI and Hangyo, M},
+  booktitle={2012 37th International Conference on Infrared, Millimeter, and Terahertz Waves},
+  year={2012}
 }
 
 /*}}}*/
