--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1320,6 +1320,17 @@ Terahertz spectroscopy of ferroelectrics and related materials
   booktitle={2012 37th International Conference on Infrared, Millimeter, and Terahertz Waves},
   year={2012}
 }
+@article{holloway2003double,
+  title={A double negative (DNG) composite medium composed of magnetodielectric spherical particles embedded in a matrix},
+  author={Holloway, Christopher L and Kuester, Edward F and Baker-Jarvis, James and Kabos, Pavel},
+  journal={Antennas and Propagation, IEEE Transactions on},
+  volume={51},
+  number={10},
+  pages={2596--2603},
+  year={2003},
+  publisher={IEEE}
+}
+
 
 /*}}}*/
 % -- Fishnets, meshes and EOT --/*{{{*/
